# fastapi-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
{{ cookiecutter.project_slug }}/: Dockerfile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/changelog.d/: template_news.chore
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: app.py  routes.py  schemas.py  services.py  settings.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/tests/: test_routers.py
